parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expression
Rule 1     expression -> expression PLUS term
Rule 2     expression -> expression MINUS term
Rule 3     expression -> term
Rule 4     term -> term TIMES factor
Rule 5     term -> term DIVIDE factor
Rule 6     term -> factor
Rule 7     factor -> NUMBER
Rule 8     factor -> VARIABLE
Rule 9     factor -> LPAREN expression RPAREN
Rule 10    factor -> SIN LPAREN expression RPAREN
Rule 11    factor -> COS LPAREN expression RPAREN
Rule 12    factor -> TAN LPAREN expression RPAREN
Rule 13    factor -> LOG LPAREN expression RPAREN
Rule 14    factor -> SQRT LBRACE expression RBRACE
Rule 15    factor -> FRAC LBRACE expression RBRACE LBRACE expression RBRACE
Rule 16    factor -> INT factor
Rule 17    factor -> INT LBRACE expression RBRACE SUP LBRACE expression RBRACE expression
Rule 18    factor -> IINT LBRACE expression RBRACE SUP LBRACE expression RBRACE expression
Rule 19    factor -> IIINT LBRACE expression RBRACE SUP LBRACE expression RBRACE expression
Rule 20    factor -> ALPHA
Rule 21    factor -> BETA
Rule 22    factor -> GAMMA
Rule 23    factor -> DELTA
Rule 24    factor -> PI
Rule 25    factor -> MINUS factor
Rule 26    expression -> expression NEWLINE expression
Rule 27    factor -> factor SUP factor

Terminals, with rules where they appear

ALPHA                : 20
BETA                 : 21
COS                  : 11
DELTA                : 23
DIVIDE               : 5
FRAC                 : 15
GAMMA                : 22
IIINT                : 19
IINT                 : 18
INT                  : 16 17
LBRACE               : 14 15 15 17 17 18 18 19 19
LOG                  : 13
LPAREN               : 9 10 11 12 13
MINUS                : 2 25
NEWLINE              : 26
NUMBER               : 7
PI                   : 24
PLUS                 : 1
RBRACE               : 14 15 15 17 17 18 18 19 19
RPAREN               : 9 10 11 12 13
SIN                  : 10
SQRT                 : 14
SUP                  : 17 18 19 27
TAN                  : 12
TIMES                : 4
VARIABLE             : 8
error                : 

Nonterminals, with rules where they appear

expression           : 1 2 9 10 11 12 13 14 15 15 17 17 17 18 18 18 19 19 19 26 26 0
factor               : 4 5 6 16 25 27 27
term                 : 1 2 3 4 5

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (3) expression -> . term
    (26) expression -> . expression NEWLINE expression
    (4) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . VARIABLE
    (9) factor -> . LPAREN expression RPAREN
    (10) factor -> . SIN LPAREN expression RPAREN
    (11) factor -> . COS LPAREN expression RPAREN
    (12) factor -> . TAN LPAREN expression RPAREN
    (13) factor -> . LOG LPAREN expression RPAREN
    (14) factor -> . SQRT LBRACE expression RBRACE
    (15) factor -> . FRAC LBRACE expression RBRACE LBRACE expression RBRACE
    (16) factor -> . INT factor
    (17) factor -> . INT LBRACE expression RBRACE SUP LBRACE expression RBRACE expression
    (18) factor -> . IINT LBRACE expression RBRACE SUP LBRACE expression RBRACE expression
    (19) factor -> . IIINT LBRACE expression RBRACE SUP LBRACE expression RBRACE expression
    (20) factor -> . ALPHA
    (21) factor -> . BETA
    (22) factor -> . GAMMA
    (23) factor -> . DELTA
    (24) factor -> . PI
    (25) factor -> . MINUS factor
    (27) factor -> . factor SUP factor

    NUMBER          shift and go to state 5
    VARIABLE        shift and go to state 6
    LPAREN          shift and go to state 7
    SIN             shift and go to state 8
    COS             shift and go to state 9
    TAN             shift and go to state 10
    LOG             shift and go to state 11
    SQRT            shift and go to state 12
    FRAC            shift and go to state 13
    INT             shift and go to state 14
    IINT            shift and go to state 15
    IIINT           shift and go to state 16
    ALPHA           shift and go to state 17
    BETA            shift and go to state 18
    GAMMA           shift and go to state 19
    DELTA           shift and go to state 20
    PI              shift and go to state 21
    MINUS           shift and go to state 3

    expression                     shift and go to state 1
    term                           shift and go to state 2
    factor                         shift and go to state 4

state 1

    (0) S' -> expression .
    (1) expression -> expression . PLUS term
    (2) expression -> expression . MINUS term
    (26) expression -> expression . NEWLINE expression

    PLUS            shift and go to state 22
    MINUS           shift and go to state 23
    NEWLINE         shift and go to state 24


state 2

    (3) expression -> term .
    (4) term -> term . TIMES factor
    (5) term -> term . DIVIDE factor

  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
    PLUS            reduce using rule 3 (expression -> term .)
    MINUS           reduce using rule 3 (expression -> term .)
    NEWLINE         reduce using rule 3 (expression -> term .)
    $end            reduce using rule 3 (expression -> term .)
    RPAREN          reduce using rule 3 (expression -> term .)
    SUP             reduce using rule 3 (expression -> term .)
    RBRACE          reduce using rule 3 (expression -> term .)
    TIMES           shift and go to state 25
    DIVIDE          shift and go to state 26

  ! TIMES           [ reduce using rule 3 (expression -> term .) ]
  ! DIVIDE          [ reduce using rule 3 (expression -> term .) ]


state 3

    (25) factor -> MINUS . factor
    (7) factor -> . NUMBER
    (8) factor -> . VARIABLE
    (9) factor -> . LPAREN expression RPAREN
    (10) factor -> . SIN LPAREN expression RPAREN
    (11) factor -> . COS LPAREN expression RPAREN
    (12) factor -> . TAN LPAREN expression RPAREN
    (13) factor -> . LOG LPAREN expression RPAREN
    (14) factor -> . SQRT LBRACE expression RBRACE
    (15) factor -> . FRAC LBRACE expression RBRACE LBRACE expression RBRACE
    (16) factor -> . INT factor
    (17) factor -> . INT LBRACE expression RBRACE SUP LBRACE expression RBRACE expression
    (18) factor -> . IINT LBRACE expression RBRACE SUP LBRACE expression RBRACE expression
    (19) factor -> . IIINT LBRACE expression RBRACE SUP LBRACE expression RBRACE expression
    (20) factor -> . ALPHA
    (21) factor -> . BETA
    (22) factor -> . GAMMA
    (23) factor -> . DELTA
    (24) factor -> . PI
    (25) factor -> . MINUS factor
    (27) factor -> . factor SUP factor

    NUMBER          shift and go to state 5
    VARIABLE        shift and go to state 6
    LPAREN          shift and go to state 7
    SIN             shift and go to state 8
    COS             shift and go to state 9
    TAN             shift and go to state 10
    LOG             shift and go to state 11
    SQRT            shift and go to state 12
    FRAC            shift and go to state 13
    INT             shift and go to state 14
    IINT            shift and go to state 15
    IIINT           shift and go to state 16
    ALPHA           shift and go to state 17
    BETA            shift and go to state 18
    GAMMA           shift and go to state 19
    DELTA           shift and go to state 20
    PI              shift and go to state 21
    MINUS           shift and go to state 3

    factor                         shift and go to state 27

state 4

    (6) term -> factor .
    (27) factor -> factor . SUP factor

  ! shift/reduce conflict for SUP resolved as shift
    TIMES           reduce using rule 6 (term -> factor .)
    DIVIDE          reduce using rule 6 (term -> factor .)
    PLUS            reduce using rule 6 (term -> factor .)
    MINUS           reduce using rule 6 (term -> factor .)
    NEWLINE         reduce using rule 6 (term -> factor .)
    $end            reduce using rule 6 (term -> factor .)
    RPAREN          reduce using rule 6 (term -> factor .)
    RBRACE          reduce using rule 6 (term -> factor .)
    SUP             shift and go to state 28

  ! SUP             [ reduce using rule 6 (term -> factor .) ]


state 5

    (7) factor -> NUMBER .

    SUP             reduce using rule 7 (factor -> NUMBER .)
    TIMES           reduce using rule 7 (factor -> NUMBER .)
    DIVIDE          reduce using rule 7 (factor -> NUMBER .)
    PLUS            reduce using rule 7 (factor -> NUMBER .)
    MINUS           reduce using rule 7 (factor -> NUMBER .)
    NEWLINE         reduce using rule 7 (factor -> NUMBER .)
    $end            reduce using rule 7 (factor -> NUMBER .)
    RPAREN          reduce using rule 7 (factor -> NUMBER .)
    RBRACE          reduce using rule 7 (factor -> NUMBER .)


state 6

    (8) factor -> VARIABLE .

    SUP             reduce using rule 8 (factor -> VARIABLE .)
    TIMES           reduce using rule 8 (factor -> VARIABLE .)
    DIVIDE          reduce using rule 8 (factor -> VARIABLE .)
    PLUS            reduce using rule 8 (factor -> VARIABLE .)
    MINUS           reduce using rule 8 (factor -> VARIABLE .)
    NEWLINE         reduce using rule 8 (factor -> VARIABLE .)
    $end            reduce using rule 8 (factor -> VARIABLE .)
    RPAREN          reduce using rule 8 (factor -> VARIABLE .)
    RBRACE          reduce using rule 8 (factor -> VARIABLE .)


state 7

    (9) factor -> LPAREN . expression RPAREN
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (3) expression -> . term
    (26) expression -> . expression NEWLINE expression
    (4) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . VARIABLE
    (9) factor -> . LPAREN expression RPAREN
    (10) factor -> . SIN LPAREN expression RPAREN
    (11) factor -> . COS LPAREN expression RPAREN
    (12) factor -> . TAN LPAREN expression RPAREN
    (13) factor -> . LOG LPAREN expression RPAREN
    (14) factor -> . SQRT LBRACE expression RBRACE
    (15) factor -> . FRAC LBRACE expression RBRACE LBRACE expression RBRACE
    (16) factor -> . INT factor
    (17) factor -> . INT LBRACE expression RBRACE SUP LBRACE expression RBRACE expression
    (18) factor -> . IINT LBRACE expression RBRACE SUP LBRACE expression RBRACE expression
    (19) factor -> . IIINT LBRACE expression RBRACE SUP LBRACE expression RBRACE expression
    (20) factor -> . ALPHA
    (21) factor -> . BETA
    (22) factor -> . GAMMA
    (23) factor -> . DELTA
    (24) factor -> . PI
    (25) factor -> . MINUS factor
    (27) factor -> . factor SUP factor

    NUMBER          shift and go to state 5
    VARIABLE        shift and go to state 6
    LPAREN          shift and go to state 7
    SIN             shift and go to state 8
    COS             shift and go to state 9
    TAN             shift and go to state 10
    LOG             shift and go to state 11
    SQRT            shift and go to state 12
    FRAC            shift and go to state 13
    INT             shift and go to state 14
    IINT            shift and go to state 15
    IIINT           shift and go to state 16
    ALPHA           shift and go to state 17
    BETA            shift and go to state 18
    GAMMA           shift and go to state 19
    DELTA           shift and go to state 20
    PI              shift and go to state 21
    MINUS           shift and go to state 3

    expression                     shift and go to state 29
    term                           shift and go to state 2
    factor                         shift and go to state 4

state 8

    (10) factor -> SIN . LPAREN expression RPAREN

    LPAREN          shift and go to state 30


state 9

    (11) factor -> COS . LPAREN expression RPAREN

    LPAREN          shift and go to state 31


state 10

    (12) factor -> TAN . LPAREN expression RPAREN

    LPAREN          shift and go to state 32


state 11

    (13) factor -> LOG . LPAREN expression RPAREN

    LPAREN          shift and go to state 33


state 12

    (14) factor -> SQRT . LBRACE expression RBRACE

    LBRACE          shift and go to state 34


state 13

    (15) factor -> FRAC . LBRACE expression RBRACE LBRACE expression RBRACE

    LBRACE          shift and go to state 35


state 14

    (16) factor -> INT . factor
    (17) factor -> INT . LBRACE expression RBRACE SUP LBRACE expression RBRACE expression
    (7) factor -> . NUMBER
    (8) factor -> . VARIABLE
    (9) factor -> . LPAREN expression RPAREN
    (10) factor -> . SIN LPAREN expression RPAREN
    (11) factor -> . COS LPAREN expression RPAREN
    (12) factor -> . TAN LPAREN expression RPAREN
    (13) factor -> . LOG LPAREN expression RPAREN
    (14) factor -> . SQRT LBRACE expression RBRACE
    (15) factor -> . FRAC LBRACE expression RBRACE LBRACE expression RBRACE
    (16) factor -> . INT factor
    (17) factor -> . INT LBRACE expression RBRACE SUP LBRACE expression RBRACE expression
    (18) factor -> . IINT LBRACE expression RBRACE SUP LBRACE expression RBRACE expression
    (19) factor -> . IIINT LBRACE expression RBRACE SUP LBRACE expression RBRACE expression
    (20) factor -> . ALPHA
    (21) factor -> . BETA
    (22) factor -> . GAMMA
    (23) factor -> . DELTA
    (24) factor -> . PI
    (25) factor -> . MINUS factor
    (27) factor -> . factor SUP factor

    LBRACE          shift and go to state 37
    NUMBER          shift and go to state 5
    VARIABLE        shift and go to state 6
    LPAREN          shift and go to state 7
    SIN             shift and go to state 8
    COS             shift and go to state 9
    TAN             shift and go to state 10
    LOG             shift and go to state 11
    SQRT            shift and go to state 12
    FRAC            shift and go to state 13
    INT             shift and go to state 14
    IINT            shift and go to state 15
    IIINT           shift and go to state 16
    ALPHA           shift and go to state 17
    BETA            shift and go to state 18
    GAMMA           shift and go to state 19
    DELTA           shift and go to state 20
    PI              shift and go to state 21
    MINUS           shift and go to state 3

    factor                         shift and go to state 36

state 15

    (18) factor -> IINT . LBRACE expression RBRACE SUP LBRACE expression RBRACE expression

    LBRACE          shift and go to state 38


state 16

    (19) factor -> IIINT . LBRACE expression RBRACE SUP LBRACE expression RBRACE expression

    LBRACE          shift and go to state 39


state 17

    (20) factor -> ALPHA .

    SUP             reduce using rule 20 (factor -> ALPHA .)
    TIMES           reduce using rule 20 (factor -> ALPHA .)
    DIVIDE          reduce using rule 20 (factor -> ALPHA .)
    PLUS            reduce using rule 20 (factor -> ALPHA .)
    MINUS           reduce using rule 20 (factor -> ALPHA .)
    NEWLINE         reduce using rule 20 (factor -> ALPHA .)
    $end            reduce using rule 20 (factor -> ALPHA .)
    RPAREN          reduce using rule 20 (factor -> ALPHA .)
    RBRACE          reduce using rule 20 (factor -> ALPHA .)


state 18

    (21) factor -> BETA .

    SUP             reduce using rule 21 (factor -> BETA .)
    TIMES           reduce using rule 21 (factor -> BETA .)
    DIVIDE          reduce using rule 21 (factor -> BETA .)
    PLUS            reduce using rule 21 (factor -> BETA .)
    MINUS           reduce using rule 21 (factor -> BETA .)
    NEWLINE         reduce using rule 21 (factor -> BETA .)
    $end            reduce using rule 21 (factor -> BETA .)
    RPAREN          reduce using rule 21 (factor -> BETA .)
    RBRACE          reduce using rule 21 (factor -> BETA .)


state 19

    (22) factor -> GAMMA .

    SUP             reduce using rule 22 (factor -> GAMMA .)
    TIMES           reduce using rule 22 (factor -> GAMMA .)
    DIVIDE          reduce using rule 22 (factor -> GAMMA .)
    PLUS            reduce using rule 22 (factor -> GAMMA .)
    MINUS           reduce using rule 22 (factor -> GAMMA .)
    NEWLINE         reduce using rule 22 (factor -> GAMMA .)
    $end            reduce using rule 22 (factor -> GAMMA .)
    RPAREN          reduce using rule 22 (factor -> GAMMA .)
    RBRACE          reduce using rule 22 (factor -> GAMMA .)


state 20

    (23) factor -> DELTA .

    SUP             reduce using rule 23 (factor -> DELTA .)
    TIMES           reduce using rule 23 (factor -> DELTA .)
    DIVIDE          reduce using rule 23 (factor -> DELTA .)
    PLUS            reduce using rule 23 (factor -> DELTA .)
    MINUS           reduce using rule 23 (factor -> DELTA .)
    NEWLINE         reduce using rule 23 (factor -> DELTA .)
    $end            reduce using rule 23 (factor -> DELTA .)
    RPAREN          reduce using rule 23 (factor -> DELTA .)
    RBRACE          reduce using rule 23 (factor -> DELTA .)


state 21

    (24) factor -> PI .

    SUP             reduce using rule 24 (factor -> PI .)
    TIMES           reduce using rule 24 (factor -> PI .)
    DIVIDE          reduce using rule 24 (factor -> PI .)
    PLUS            reduce using rule 24 (factor -> PI .)
    MINUS           reduce using rule 24 (factor -> PI .)
    NEWLINE         reduce using rule 24 (factor -> PI .)
    $end            reduce using rule 24 (factor -> PI .)
    RPAREN          reduce using rule 24 (factor -> PI .)
    RBRACE          reduce using rule 24 (factor -> PI .)


state 22

    (1) expression -> expression PLUS . term
    (4) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . VARIABLE
    (9) factor -> . LPAREN expression RPAREN
    (10) factor -> . SIN LPAREN expression RPAREN
    (11) factor -> . COS LPAREN expression RPAREN
    (12) factor -> . TAN LPAREN expression RPAREN
    (13) factor -> . LOG LPAREN expression RPAREN
    (14) factor -> . SQRT LBRACE expression RBRACE
    (15) factor -> . FRAC LBRACE expression RBRACE LBRACE expression RBRACE
    (16) factor -> . INT factor
    (17) factor -> . INT LBRACE expression RBRACE SUP LBRACE expression RBRACE expression
    (18) factor -> . IINT LBRACE expression RBRACE SUP LBRACE expression RBRACE expression
    (19) factor -> . IIINT LBRACE expression RBRACE SUP LBRACE expression RBRACE expression
    (20) factor -> . ALPHA
    (21) factor -> . BETA
    (22) factor -> . GAMMA
    (23) factor -> . DELTA
    (24) factor -> . PI
    (25) factor -> . MINUS factor
    (27) factor -> . factor SUP factor

    NUMBER          shift and go to state 5
    VARIABLE        shift and go to state 6
    LPAREN          shift and go to state 7
    SIN             shift and go to state 8
    COS             shift and go to state 9
    TAN             shift and go to state 10
    LOG             shift and go to state 11
    SQRT            shift and go to state 12
    FRAC            shift and go to state 13
    INT             shift and go to state 14
    IINT            shift and go to state 15
    IIINT           shift and go to state 16
    ALPHA           shift and go to state 17
    BETA            shift and go to state 18
    GAMMA           shift and go to state 19
    DELTA           shift and go to state 20
    PI              shift and go to state 21
    MINUS           shift and go to state 3

    term                           shift and go to state 40
    factor                         shift and go to state 4

state 23

    (2) expression -> expression MINUS . term
    (4) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . VARIABLE
    (9) factor -> . LPAREN expression RPAREN
    (10) factor -> . SIN LPAREN expression RPAREN
    (11) factor -> . COS LPAREN expression RPAREN
    (12) factor -> . TAN LPAREN expression RPAREN
    (13) factor -> . LOG LPAREN expression RPAREN
    (14) factor -> . SQRT LBRACE expression RBRACE
    (15) factor -> . FRAC LBRACE expression RBRACE LBRACE expression RBRACE
    (16) factor -> . INT factor
    (17) factor -> . INT LBRACE expression RBRACE SUP LBRACE expression RBRACE expression
    (18) factor -> . IINT LBRACE expression RBRACE SUP LBRACE expression RBRACE expression
    (19) factor -> . IIINT LBRACE expression RBRACE SUP LBRACE expression RBRACE expression
    (20) factor -> . ALPHA
    (21) factor -> . BETA
    (22) factor -> . GAMMA
    (23) factor -> . DELTA
    (24) factor -> . PI
    (25) factor -> . MINUS factor
    (27) factor -> . factor SUP factor

    NUMBER          shift and go to state 5
    VARIABLE        shift and go to state 6
    LPAREN          shift and go to state 7
    SIN             shift and go to state 8
    COS             shift and go to state 9
    TAN             shift and go to state 10
    LOG             shift and go to state 11
    SQRT            shift and go to state 12
    FRAC            shift and go to state 13
    INT             shift and go to state 14
    IINT            shift and go to state 15
    IIINT           shift and go to state 16
    ALPHA           shift and go to state 17
    BETA            shift and go to state 18
    GAMMA           shift and go to state 19
    DELTA           shift and go to state 20
    PI              shift and go to state 21
    MINUS           shift and go to state 3

    term                           shift and go to state 41
    factor                         shift and go to state 4

state 24

    (26) expression -> expression NEWLINE . expression
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (3) expression -> . term
    (26) expression -> . expression NEWLINE expression
    (4) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . VARIABLE
    (9) factor -> . LPAREN expression RPAREN
    (10) factor -> . SIN LPAREN expression RPAREN
    (11) factor -> . COS LPAREN expression RPAREN
    (12) factor -> . TAN LPAREN expression RPAREN
    (13) factor -> . LOG LPAREN expression RPAREN
    (14) factor -> . SQRT LBRACE expression RBRACE
    (15) factor -> . FRAC LBRACE expression RBRACE LBRACE expression RBRACE
    (16) factor -> . INT factor
    (17) factor -> . INT LBRACE expression RBRACE SUP LBRACE expression RBRACE expression
    (18) factor -> . IINT LBRACE expression RBRACE SUP LBRACE expression RBRACE expression
    (19) factor -> . IIINT LBRACE expression RBRACE SUP LBRACE expression RBRACE expression
    (20) factor -> . ALPHA
    (21) factor -> . BETA
    (22) factor -> . GAMMA
    (23) factor -> . DELTA
    (24) factor -> . PI
    (25) factor -> . MINUS factor
    (27) factor -> . factor SUP factor

    NUMBER          shift and go to state 5
    VARIABLE        shift and go to state 6
    LPAREN          shift and go to state 7
    SIN             shift and go to state 8
    COS             shift and go to state 9
    TAN             shift and go to state 10
    LOG             shift and go to state 11
    SQRT            shift and go to state 12
    FRAC            shift and go to state 13
    INT             shift and go to state 14
    IINT            shift and go to state 15
    IIINT           shift and go to state 16
    ALPHA           shift and go to state 17
    BETA            shift and go to state 18
    GAMMA           shift and go to state 19
    DELTA           shift and go to state 20
    PI              shift and go to state 21
    MINUS           shift and go to state 3

    expression                     shift and go to state 42
    term                           shift and go to state 2
    factor                         shift and go to state 4

state 25

    (4) term -> term TIMES . factor
    (7) factor -> . NUMBER
    (8) factor -> . VARIABLE
    (9) factor -> . LPAREN expression RPAREN
    (10) factor -> . SIN LPAREN expression RPAREN
    (11) factor -> . COS LPAREN expression RPAREN
    (12) factor -> . TAN LPAREN expression RPAREN
    (13) factor -> . LOG LPAREN expression RPAREN
    (14) factor -> . SQRT LBRACE expression RBRACE
    (15) factor -> . FRAC LBRACE expression RBRACE LBRACE expression RBRACE
    (16) factor -> . INT factor
    (17) factor -> . INT LBRACE expression RBRACE SUP LBRACE expression RBRACE expression
    (18) factor -> . IINT LBRACE expression RBRACE SUP LBRACE expression RBRACE expression
    (19) factor -> . IIINT LBRACE expression RBRACE SUP LBRACE expression RBRACE expression
    (20) factor -> . ALPHA
    (21) factor -> . BETA
    (22) factor -> . GAMMA
    (23) factor -> . DELTA
    (24) factor -> . PI
    (25) factor -> . MINUS factor
    (27) factor -> . factor SUP factor

    NUMBER          shift and go to state 5
    VARIABLE        shift and go to state 6
    LPAREN          shift and go to state 7
    SIN             shift and go to state 8
    COS             shift and go to state 9
    TAN             shift and go to state 10
    LOG             shift and go to state 11
    SQRT            shift and go to state 12
    FRAC            shift and go to state 13
    INT             shift and go to state 14
    IINT            shift and go to state 15
    IIINT           shift and go to state 16
    ALPHA           shift and go to state 17
    BETA            shift and go to state 18
    GAMMA           shift and go to state 19
    DELTA           shift and go to state 20
    PI              shift and go to state 21
    MINUS           shift and go to state 3

    factor                         shift and go to state 43

state 26

    (5) term -> term DIVIDE . factor
    (7) factor -> . NUMBER
    (8) factor -> . VARIABLE
    (9) factor -> . LPAREN expression RPAREN
    (10) factor -> . SIN LPAREN expression RPAREN
    (11) factor -> . COS LPAREN expression RPAREN
    (12) factor -> . TAN LPAREN expression RPAREN
    (13) factor -> . LOG LPAREN expression RPAREN
    (14) factor -> . SQRT LBRACE expression RBRACE
    (15) factor -> . FRAC LBRACE expression RBRACE LBRACE expression RBRACE
    (16) factor -> . INT factor
    (17) factor -> . INT LBRACE expression RBRACE SUP LBRACE expression RBRACE expression
    (18) factor -> . IINT LBRACE expression RBRACE SUP LBRACE expression RBRACE expression
    (19) factor -> . IIINT LBRACE expression RBRACE SUP LBRACE expression RBRACE expression
    (20) factor -> . ALPHA
    (21) factor -> . BETA
    (22) factor -> . GAMMA
    (23) factor -> . DELTA
    (24) factor -> . PI
    (25) factor -> . MINUS factor
    (27) factor -> . factor SUP factor

    NUMBER          shift and go to state 5
    VARIABLE        shift and go to state 6
    LPAREN          shift and go to state 7
    SIN             shift and go to state 8
    COS             shift and go to state 9
    TAN             shift and go to state 10
    LOG             shift and go to state 11
    SQRT            shift and go to state 12
    FRAC            shift and go to state 13
    INT             shift and go to state 14
    IINT            shift and go to state 15
    IIINT           shift and go to state 16
    ALPHA           shift and go to state 17
    BETA            shift and go to state 18
    GAMMA           shift and go to state 19
    DELTA           shift and go to state 20
    PI              shift and go to state 21
    MINUS           shift and go to state 3

    factor                         shift and go to state 44

state 27

    (25) factor -> MINUS factor .
    (27) factor -> factor . SUP factor

    TIMES           reduce using rule 25 (factor -> MINUS factor .)
    DIVIDE          reduce using rule 25 (factor -> MINUS factor .)
    PLUS            reduce using rule 25 (factor -> MINUS factor .)
    MINUS           reduce using rule 25 (factor -> MINUS factor .)
    NEWLINE         reduce using rule 25 (factor -> MINUS factor .)
    $end            reduce using rule 25 (factor -> MINUS factor .)
    RPAREN          reduce using rule 25 (factor -> MINUS factor .)
    RBRACE          reduce using rule 25 (factor -> MINUS factor .)
    SUP             shift and go to state 28

  ! SUP             [ reduce using rule 25 (factor -> MINUS factor .) ]


state 28

    (27) factor -> factor SUP . factor
    (7) factor -> . NUMBER
    (8) factor -> . VARIABLE
    (9) factor -> . LPAREN expression RPAREN
    (10) factor -> . SIN LPAREN expression RPAREN
    (11) factor -> . COS LPAREN expression RPAREN
    (12) factor -> . TAN LPAREN expression RPAREN
    (13) factor -> . LOG LPAREN expression RPAREN
    (14) factor -> . SQRT LBRACE expression RBRACE
    (15) factor -> . FRAC LBRACE expression RBRACE LBRACE expression RBRACE
    (16) factor -> . INT factor
    (17) factor -> . INT LBRACE expression RBRACE SUP LBRACE expression RBRACE expression
    (18) factor -> . IINT LBRACE expression RBRACE SUP LBRACE expression RBRACE expression
    (19) factor -> . IIINT LBRACE expression RBRACE SUP LBRACE expression RBRACE expression
    (20) factor -> . ALPHA
    (21) factor -> . BETA
    (22) factor -> . GAMMA
    (23) factor -> . DELTA
    (24) factor -> . PI
    (25) factor -> . MINUS factor
    (27) factor -> . factor SUP factor

    NUMBER          shift and go to state 5
    VARIABLE        shift and go to state 6
    LPAREN          shift and go to state 7
    SIN             shift and go to state 8
    COS             shift and go to state 9
    TAN             shift and go to state 10
    LOG             shift and go to state 11
    SQRT            shift and go to state 12
    FRAC            shift and go to state 13
    INT             shift and go to state 14
    IINT            shift and go to state 15
    IIINT           shift and go to state 16
    ALPHA           shift and go to state 17
    BETA            shift and go to state 18
    GAMMA           shift and go to state 19
    DELTA           shift and go to state 20
    PI              shift and go to state 21
    MINUS           shift and go to state 3

    factor                         shift and go to state 45

state 29

    (9) factor -> LPAREN expression . RPAREN
    (1) expression -> expression . PLUS term
    (2) expression -> expression . MINUS term
    (26) expression -> expression . NEWLINE expression

    RPAREN          shift and go to state 46
    PLUS            shift and go to state 22
    MINUS           shift and go to state 23
    NEWLINE         shift and go to state 24


state 30
